Add optional TP profile export for IGMs during CGM quick export.
Signed-off-by: Coline Piloquet <coline.piloquet@rte-france.com>